# stmt_obfuscator

./: .docstring_style.md  .gitignore  .pre-commit-config.yaml  .rooignore  CHANGELOG.md  LICENSE  PR_DESCRIPTION.md  README.md  architecture_document.md  demo_bank_statement_obfuscator.py  demo_bank_statement_obfuscator_fixed.py  pyproject.toml  task_list.md
data/: evaluation_results.json  quick_test_results.json  quick_test_sample.txt  quick_test_sample_ground_truth.json
demo_output/: obfuscated_statement.json  obfuscated_statement.txt  pii_detection_with_rag.json
docs/: Makefile  api_reference.rst  conf.py  index.rst  pdf_export_improvements.md  pdf_export_summary.md  pdf_export_testing.md  project_status.md  rag_implementation.md  rag_testing_results.md  release_checklist.md  running_locally.md  setup_guide.md  troubleshooting.md  user_guide.md
docs/subtasks/: 01-project-setup.md  02-pii-detection-module-design.md  03-pdf-parsing-module.md  04-rag-module-design.md  05-obfuscation-module.md  06-project-setup-verification.md  07-ui-implementation.md  08-testing-framework.md  README.md
examples/: demo_script.py  layout_preservation_example.py  obfuscation_example.py
pii_detection_poc/: README.md  findings_and_recommendations.md  requirements.txt
pii_detection_poc/data/: statement_1.txt  statement_1_ground_truth.json  statement_2.txt  statement_2_ground_truth.json  statement_3.txt  statement_3_ground_truth.json
scripts/: setup_dev_env.sh
stmt_obfuscator/: config.py  main.py
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_basic.py
(+48 files in other folders)
