[tool.poetry]
name = "stmt-obfuscator"
version = "1.0.0"
description = "PDF Bank Statement Obfuscator - A privacy-focused desktop application for removing PII from bank statements"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "stmt_obfuscator"}]

[tool.poetry.dependencies]
python = "^3.10"
pymupdf = "1.23.8"
pyqt6 = "6.6.1"
chromadb = "0.4.22"
faker = "^24.0.0"
requests = "^2.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^24.1.0"
isort = "^5.12.0"
flake8 = "^7.0.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
